Fix for minor elements alignment issue

--- a/web/client/css/index.css
+++ b/web/client/css/index.css
@@ -1,11 +1,11 @@
+html, body {
+    height: 100%;
+}
+
 .windowed {
-    position: absolute;
-    margin: auto;
-    left: 0;
-    right: 0;
     border: none;
-    width: 98%;
-    height: 80%
+    width: 100%;
+    height: 100%
 }
 
 .full-screen {
@@ -28,4 +28,8 @@
     margin-right: auto;
     width: auto;
     max-width: 100%;
+}
+
+.iframe-wrapper {
+    height: 80%;
 }
